# NeoBIM_Workflow_Builder

./: .env.example  .gitignore  API_FIXES_PLAN.md  API_FIXES_REPORT.md  CLAUDE.md  DELIVERY_SUMMARY.md  GOVIND_QUICK_START.md  KLING_PROMPT_OPTIMIZATION_REPORT_2026-04-27.md  MARKETING_BATCH_1_REPORT_2026-05-04.md  MARKETING_BATCH_2_REPORT_2026-05-04.md  PHASE_1_REPORT_2026-04-21.md  PHASE_2_REPORT_2026-04-22.md  PHASE_3_5A_REPORT_2026-04-23.md  PHASE_3_5B_REPORT_2026-04-23.md  PHASE_3_REPORT_2026-04-22.md  PHASE_4A_HOTFIX_REPORT_2026-04-23.md  PHASE_4A_REPORT_2026-04-23.md  PHASE_5_1_PLAN.md  PHASE_5_1_REPORT_2026-04-26.md  PHASE_5_CHROME_CLEANUP_PLAN.md  PHASE_5_CHROME_CLEANUP_REPORT_2026-04-26.md  PHASE_F_PREFLIGHT_LOG.txt  PHASE_F_SHIP_LOG_2026-04-24.md  PHASE_GOOGLE_ADS_OAUTH_FIX_REPORT_2026-04-24.md  PHASE_RAZORPAY_FIX_REPORT_2026-04-23.md  PHASE_VIDEO_BG_JOBS_PHASE2_5_REPORT_2026-04-24.md  PHASE_VIDEO_BG_JOBS_PHASE2_REPORT_2026-04-24.md  PHASE_VIDEO_BG_JOBS_REPORT_2026-04-24.md  PHASE_VIDEO_WALKTHROUGH_BIAS_STRIP_REPORT_2026-04-27.md  PHASE_VIDEO_WALKTHROUGH_FINAL_FIX_REPORT_2026-04-27.md  PHASE_VIDEO_WALKTHROUGH_FIX_REPORT_2026-04-27.md  PR_REVIEW_COMPLETE.md  README.md  RESULTS_V2_PHASE_D_REPORT_2026-04-24.md  RESULTS_V2_PHASE_E_MERGE_READINESS_2026-04-24.md  RESULTS_V2_REPORT_2026-04-24.md  RESULT_PAGE_PHASE_2_DIAGNOSTIC_2026-04-26.md  RESULT_PAGE_PHASE_3_REPORT_2026-04-26.md  RESULT_PAGE_PHASE_4_1_REPORT_2026-04-26.md  RESULT_PAGE_PHASE_4_2_PLAN.md  (+19 more)
neobim-ifc-service/: pyproject.toml
neobim-ifc-service/app/: auth.py  main.py  middleware.py
neobim-ifc-service/docs/: lod-target.md  python-service-baseline-2026-05-01.md
neobim-ifc-service/ids/: architectural.ids  core.ids  lod-300.ids  lod-350.ids  mep.ids  structural.ids
neobim-ifc-service/scripts/: audit_emission.py  capture_visual_matrix.py  count_ifc_entities.py  diff_visual_matrix.py  submit_buildingsmart_baseline.py
neobim-ifc-service/tests/: test_audit_endpoint.py  test_baseline_quality.py  test_building_model_construction.py  test_buildingsmart_baseline.py  test_deterministic_guids.py  test_geometry_resolver.py  test_ids_files_valid.py  test_ids_validation_stage.py  test_massing_lift.py  test_mep_distribution_system.py  test_nbc_india_classification.py  test_no_fallback_chains.py  test_parametric_builders.py  test_phase1_ids_violations_reduced.py  test_phase1_request_integration.py  (+11 more)
(+1560 files in other folders)
