[project]
name = "neobim-ifc-service"
version = "1.0.0"
description = "IfcOpenShell-based IFC generation microservice for NeoBIM Workflow Builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ifcopenshell>=0.8.0",
    "ifctester>=0.8.0",
    "boto3>=1.35.0",
    "structlog>=24.0",
    # Phase 1 — needed by BuildingModel invariants ROOM_BOUNDED + FOOTPRINT_VALID
    # for shapely.geometry.Polygon validity / signed-area checks.
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Phase 0 — explicit package discovery. The new ids/ directory (XML
# files, not Python) sits next to app/, which trips setuptools' flat-
# layout multi-top-level-package safety check and aborts the editable
# install before pydantic / etc. ever resolve. Pin app/ as the only
# importable package and explicitly exclude the rest as belt-and-
# suspenders.
include = ["app*"]
exclude = ["ids*", "scripts*", "tests*", "docs*"]
